@@ -5,6 +5,7 @@ Unreleased
 ------------------------------------------
 - Strip the escaping from escaped characters.
 - Print [img] for images without alt text.
+- Support omitting frontmatter.
 
 
 demarkdown v0.1.0              2024-01-20
